//Modification mineure encore

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       
   
         <footer>
-	   <p>Cloud Dev git-hub <a href="https://github.com/ATField2501 target=_blank"></a>ATField2501</p>
+	   <p>Cloud Dev git-hub <a href="https://github.com/ATField2501""target=_blank">ATField2501</p>
            <p><a href="mailto:atfield2501@gmail.com">Contacter ATField2501 par e-mail </a></p>	    
         </footer>
 
